--- a/client/src/app/pages/notes/all-notes/all-notes.component.scss
+++ b/client/src/app/pages/notes/all-notes/all-notes.component.scss
@@ -5,4 +5,9 @@
     .btn-add {
         float: right;
     }
+    img {
+        width:31px;
+        height:29px;
+        border-radius: 50%;
+      }
 }
