--- a/client/src/app/pages/projects/smart-table/smart-table.component.html
+++ b/client/src/app/pages/projects/smart-table/smart-table.component.html
@@ -43,7 +43,7 @@
                 <div class="form-group row">
                 <label for="inputDescription" class="col-sm-3 col-form-label">Description</label>
                 <div class="col-sm-9">
-                    <textarea name="description" [(ngModel)]="project_register.description" type="progress" class="form-control" id="inputProgress" placeholder="Enter the description of the project"></textarea>
+                    <textarea rows="5" name="description" [(ngModel)]="project_register.description" type="progress" class="form-control" id="inputProgress" placeholder="Enter the description of the project"></textarea>
                   <!--<ngx-tiny-mce></ngx-tiny-mce>-->
                 </div>
                 </div>
