--- a/client/src/app/pages/tasks/all-tasks/all-tasks.component.html
+++ b/client/src/app/pages/tasks/all-tasks/all-tasks.component.html
@@ -36,7 +36,7 @@
                 <label for="inputDescription" class="col-sm-3 col-form-label">Task Description</label>
                 <div class="col-sm-9">
                   <!--<ngx-tiny-mce></ngx-tiny-mce>-->
-                  <textarea name="description" [(ngModel)]="task_register.description" type="name" class="form-control" id="inputDescription" placeholder="Enter the description of the task"></textarea>
+                  <textarea rows="5" name="description" [(ngModel)]="task_register.description" type="name" class="form-control" id="inputDescription" placeholder="Enter the description of the task"></textarea>
                 </div>
                 </div>
                 <div class="form-group row">
@@ -76,7 +76,7 @@
               </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-info" (click)="insert()">Save Project</button>
+          <button type="button" class="btn btn-info" (click)="insert()" data-dismiss="modal">Save Project</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
