--- a/client/src/app/pages/teams/members/members.component.html
+++ b/client/src/app/pages/teams/members/members.component.html
@@ -5,7 +5,7 @@
   </nb-card-header>
 
   <nb-card-body>
-    <ng2-smart-table [settings]="settings" [source]="source" (edit)="editProject()" (delete)="deleteProject()">
+    <ng2-smart-table [settings]="settings" [source]="source" (edit)="editProject()" (delete)="deleteProject($event)">
     </ng2-smart-table>
   </nb-card-body>
 </nb-card>
@@ -65,7 +65,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-info" (click)="insert()">Save Member</button>
+        <button type="button" class="btn btn-info" (click)="insert()" data-dismiss="modal">Save Member</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
