--- a/client/src/app/pages/projects/smart-table/smart-table.component.html
+++ b/client/src/app/pages/projects/smart-table/smart-table.component.html
@@ -7,7 +7,7 @@
   <nb-card-body>
     <ng2-smart-table [settings]="settings" 
     [source]="source" 
-    (edit)="editProject()"
+    (edit)="open($event)"
     (delete)="deleteProject($event)">
     </ng2-smart-table>
   </nb-card-body>
