--- a/client/src/app/pages/tasks/all-tasks/all-tasks.component.html
+++ b/client/src/app/pages/tasks/all-tasks/all-tasks.component.html
@@ -7,8 +7,8 @@
   <nb-card-body>
     <ng2-smart-table [settings]="settings" 
     [source]="source" 
-    (edit)="editProject()"
-    (delete)="deleteProject()">
+    (edit)="open($event)"
+    (delete)="deleteProject($event)">
     </ng2-smart-table>
   </nb-card-body>
 </nb-card>
@@ -36,17 +36,15 @@
                 <label for="inputDescription" class="col-sm-3 col-form-label">Task Description</label>
                 <div class="col-sm-9">
                   <!--<ngx-tiny-mce></ngx-tiny-mce>-->
-                  <textarea rows="5" name="description" [(ngModel)]="task_register.description" type="name" class="form-control" id="inputDescription" placeholder="Enter the description of the task"></textarea>
+                  <textarea rows="5" name="overview" [(ngModel)]="task_register.overview" type="name" class="form-control" id="inputDescription" placeholder="Enter the description of the task"></textarea>
                 </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputProjectName" class="col-sm-3 col-form-label">Project</label>
                     <div class="col-sm-9">
-                    <select class="form-control" name="project_name" [(ngModel)]="task_register.project_name">
-                      <option>Sudoku</option>
-                      <option>Chess</option>
-                      <option>Proaseassa</option>
-                    </select>
+                        <select (change)="changeProject(project)" #selectTipo="ngModel" name="project" [(ngModel)]="project" class="form-control">
+                            <option *ngFor="let project of projects" value="{{project.name}}">{{project.name}}</option>
+                        </select>
                   </div>
                   </div>
                 <div class="form-group row">
