--- a/client/src/app/pages/teams/teamroles/teamroles.component.html
+++ b/client/src/app/pages/teams/teamroles/teamroles.component.html
@@ -8,7 +8,7 @@
     <ng2-smart-table [settings]="settings" 
     [source]="source" 
     (edit)="editProject()"
-    (delete)="deleteProject()">
+    (delete)="deleteProject($event)">
     </ng2-smart-table>
   </nb-card-body>
 </nb-card>
@@ -62,7 +62,7 @@
               </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-info" (click)="insert()">Save Team Role</button>
+          <button type="button" class="btn btn-info" (click)="insert()" data-dismiss="modal">Save Team Role</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
