--- a/client/src/app/pages/finances/my-finances/my-finances.component.html
+++ b/client/src/app/pages/finances/my-finances/my-finances.component.html
@@ -1,73 +1,70 @@
 <nb-card>
-  <nb-card-header>
-    <i class="ion-ios-compose-outline"></i> Finances
-    <button class="btn btn-hero-success btn-add" data-toggle="modal" data-target="#exampleModal">New Entry</button>
-  </nb-card-header>
-
-  <nb-card-body>
-    <ng2-smart-table [settings]="settings" [source]="source" (edit)="editProject()" (delete)="deleteProject()">
-    </ng2-smart-table>
-  </nb-card-body>
-</nb-card>
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New Entry</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group row">
-            <label for="inputTitle" class="col-sm-3 col-form-label">Title</label>
-            <div class="col-sm-9">
-              <input name="title" [(ngModel)]="entry_register.title" type="name" class="form-control" id="inputFinanceCategory" placeholder="Enter the name of the entry">
+    <nb-card-header>
+      <i class="ion-ios-compose-outline"></i> Finances
+      <button class="btn btn-hero-success btn-add" data-toggle="modal" data-target="#exampleModal">New Entry</button>
+    </nb-card-header>
+  
+    <nb-card-body>
+      <ng2-smart-table [settings]="settings" [source]="source" (edit)="open($event)" (delete)="deleteProject($event)">
+      </ng2-smart-table>
+    </nb-card-body>
+  </nb-card>
+  
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">New Entry</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group row">
+              <label for="inputTitle" class="col-sm-3 col-form-label">Title</label>
+              <div class="col-sm-9">
+                <input name="title" [(ngModel)]="entry_register.title" type="name" class="form-control" id="inputFinanceCategory" placeholder="Enter the name of the entry">
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputNotes" class="col-sm-3 col-form-label">Notes</label>
-            <div class="col-sm-9">
-              <ngx-tiny-mce></ngx-tiny-mce>
+            <div class="form-group row">
+              <label for="inputNotes" class="col-sm-3 col-form-label">Notes</label>
+              <div class="col-sm-9">
+                <!--<ngx-tiny-mce></ngx-tiny-mce>-->
+                <textarea name="note" [(ngModel)]="entry_register.note" type="text" class="form-control" id="inputFinanceCategory" placeholder="Enter the note of the entry" rows="5"></textarea>
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputProgress" class="col-sm-3 col-form-label">Category</label>
-            <div class="col-sm-9">
-              <select class="form-control" name="category" [(ngModel)]="entry_register.category">
-                <option>Personal</option>
-                <option>Trivel</option>
-                <option>Client</option>
-              </select>
+            <div class="form-group row">
+              <label for="inputProgress" class="col-sm-3 col-form-label">Category</label>
+              <div class="col-sm-9">
+                  <select (change)="changeCategory(category)" #selectTipo="ngModel" name="category" [(ngModel)]="category" class="form-control">
+                      <option *ngFor="let category of categories" value="{{category.name}}">{{category.name}}</option>
+                  </select>
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputProgress" class="col-sm-3 col-form-label">Project</label>
-            <div class="col-sm-9">
-              <select class="form-control" name="category" [(ngModel)]="entry_register.project_name">
-                <option>Sudoku</option>
-                <option>Chess</option>
-                <option>Program</option>
-              </select>
+            <div class="form-group row">
+              <label for="inputProgress" class="col-sm-3 col-form-label">Project</label>
+              <div class="col-sm-9">
+                  <select (change)="changeProject(project)" #selectTipo="ngModel" name="project" [(ngModel)]="project" class="form-control">
+                      <option *ngFor="let project of projects" value="{{project.name}}">{{project.name}}</option>
+                  </select>
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputTitle" class="col-sm-3 col-form-label">Amount</label>
-            <div class="col-sm-9">
-              <input name="amount" [(ngModel)]="entry_register.amount" type="name" class="form-control" id="inputFinanceCategory" placeholder="0.00">
+            <div class="form-group row">
+              <label for="inputTitle" class="col-sm-3 col-form-label">Amount</label>
+              <div class="col-sm-9">
+                <input name="amount" [(ngModel)]="entry_register.amount" type="name" class="form-control" id="inputFinanceCategory" placeholder="0.00">
+              </div>
             </div>
-          </div>
-
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-info" (click)="insert()">Save Finance Category</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+  
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-info" (click)="insert()" data-dismiss="modal">Save Entry</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
