--- a/client/src/app/pages/settings/settings.component.html
+++ b/client/src/app/pages/settings/settings.component.html
@@ -7,47 +7,42 @@
             <nb-card-body>
                 <form>
                     <div class="form-group row">
-                        <label for="inputName" class="col-sm-3 col-form-label">Username</label>
+                        <label for="inputFirstName" class="col-sm-3 col-form-label">First Name</label>
                         <div class="col-sm-9">
-                            <input type="name" class="form-control" id="inputName" placeholder="Enter your username">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="inputEmail" class="col-sm-3 col-form-label">Email</label>
-                        <div class="col-sm-9">
-                            <input type="email" class="form-control" id="inputEmail" placeholder="Enter your email">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="inputFirsName" class="col-sm-3 col-form-label">First Name</label>
-                        <div class="col-sm-9">
-                            <input type="first_name" class="form-control" id="first_name" placeholder="Enter your first name">
+                            <input name="first_name" [(ngModel)]="user.first_name" type="name" class="form-control" id="inputFirstName" placeholder="Enter your first name">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="inputLastName" class="col-sm-3 col-form-label">Last Name</label>
                         <div class="col-sm-9">
-                            <input type="last_name" class="form-control" id="last_name" placeholder="Enter your last name">
+                            <input name="last_name" [(ngModel)]="user.last_name" type="email" class="form-control" id="inputLastName" placeholder="Enter your last name">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="inputAboutMe" class="col-sm-3 col-form-label">About Me</label>
+                        <label for="inputUsername" class="col-sm-3 col-form-label">Username</label>
                         <div class="col-sm-9">
-                            <textarea type="textarea" class="form-control" id="about_me" placeholder="Enter some information about yourself"></textarea>
+                            <input name="username" [(ngModel)]="user.username" type="first_name" class="form-control" id="inputUsername" placeholder="Enter your username">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="inputAddressLine1" class="col-sm-3 col-form-label">Address Line 1</label>
+                        <label for="inputEmail" class="col-sm-3 col-form-label">Email</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="address1" placeholder="Enter your first line">
+                            <input name="email" [(ngModel)]="user.email" type="last_name" class="form-control" id="inputEmail" placeholder="Enter your email">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="inputAddressLine2" class="col-sm-3 col-form-label">Address Line 2</label>
+                        <label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="address2" placeholder="Enter your second line">
+                            <input name="password" [(ngModel)]="user.password" type="textarea" class="form-control" id="inputPassword" placeholder="Enter your password"/>
                         </div>
                     </div>
+                    <div class="form-group row">
+                        <label for="inputRole" class="col-sm-3 col-form-label">Role</label>
+                        <div class="col-sm-9">
+                            <input name="role" [(ngModel)]="user.role" type="text" class="form-control" id="address1" placeholder="Enter your role">
+                        </div>
+                    </div><hr>
+                    <button type="button" class="btn btn-warning btn-update" (click)="updateUser()">Update</button>
                 </form>
             </nb-card-body>
         </nb-card>
