--- a/client/src/app/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/pages/dashboard/dashboard.component.scss
@@ -100,6 +100,10 @@
     float: right;
   }
 
+  .infos {
+    text-align: center;
+  }
+
   .contact {
     display: flex;
     align-items: center;
