--- a/client/src/app/pages/tasks/my-tasks/my-tasks.component.html
+++ b/client/src/app/pages/tasks/my-tasks/my-tasks.component.html
@@ -74,7 +74,7 @@
                 </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-info" (click)="insert()" data-dismiss="modal">Save Project</button>
+            <button type="button" class="btn btn-info" (click)="insert()" data-dismiss="modal">Save Task</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
